--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -4,7 +4,7 @@ com_Header As CanvasComponent:
     IsEntryScreen: =false
     OnReset: =
     Title: ="Text"
-    Width: =App.Width
+    Width: =375
     X: =0
     Y: =0
     ZIndex: =1
