--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -1,7 +1,7 @@
 com_Footer As CanvasComponent:
     Fill: =RGBA(0, 0, 0, 0)
     Height: =50
-    IsInventura: =true
+    IsInventura: =false
     JSONData: ="Text"
     Width: =App.Width
     X: =0
