--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -71,9 +71,7 @@ com_Galleries As CanvasComponent:
                         ThisRecord
                     )
                 DelayItemLoading: =true
-                Items: |-
-                    =//com_Galleries.Lines
-                    colLines
+                Items: =colLines
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
@@ -223,7 +221,7 @@ com_Galleries As CanvasComponent:
                         Color: =RGBA(50, 49, 48, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =Self.Size * 1.8
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
@@ -243,7 +241,7 @@ com_Galleries As CanvasComponent:
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =If(Self.Visible, Self.Size * 1.8, 0)
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
@@ -263,7 +261,7 @@ com_Galleries As CanvasComponent:
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =If(Self.Visible, Self.Size * 1.8, 0)
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
@@ -283,7 +281,7 @@ com_Galleries As CanvasComponent:
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =If(Self.Visible, Self.Size * 1.8, 0)
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
@@ -303,7 +301,7 @@ com_Galleries As CanvasComponent:
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =If(Self.Visible, Self.Size * 1.8, 0)
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
@@ -323,7 +321,7 @@ com_Galleries As CanvasComponent:
                         Color: =RGBA(50, 49, 48, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Bold, FontWeight.Semibold)
+                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                         Height: =If(Self.Visible, Self.Size * 1.8, 0)
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
@@ -368,9 +366,7 @@ com_Galleries As CanvasComponent:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =App.Theme.Colors.Darker40
                 DelayItemLoading: =true
-                Items: |-
-                    =//com_Galleries.Entries
-                    colEntries
+                Items: =Filter(colEntries, ThisRecord.Source_Ref_No = glr_Lines.Selected.Line_No)
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
