--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -98,7 +98,7 @@ com_Header As CanvasComponent:
                 LayoutMinHeight: =20
                 LayoutMinWidth: =280
                 OnCancel: =false
-                OnScan: |
+                OnScan: |-
                     =Set(
                         ScannedItem,
                         First(BarcodeReader2.Barcodes).Value
