--- a/BSiNS/Src/Components/com_HeaderData.fx.yaml
+++ b/BSiNS/Src/Components/com_HeaderData.fx.yaml
@@ -68,6 +68,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLine1 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
                     LayoutMinHeight: =32
@@ -81,6 +82,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLine2 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
                     LayoutMinHeight: =32
@@ -94,6 +96,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLine3 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =20
                     LayoutMinHeight: =32
@@ -107,6 +110,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLine4 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =20
                     LayoutMinHeight: =32
@@ -120,6 +124,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLine5 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =20
                     LayoutMinHeight: =32
@@ -150,6 +155,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLineValue1 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
                     LayoutMinHeight: =32
@@ -162,6 +168,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLineValue2 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
                     LayoutMinHeight: =32
@@ -174,6 +181,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLineValue3 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
                     LayoutMinHeight: =32
@@ -186,6 +194,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLineValue4 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
                     LayoutMinHeight: =32
@@ -198,6 +207,7 @@ com_HeaderData As CanvasComponent:
 
                 txt_HeaderDataLineValue5 As Text:
                     AutoHeight: =true
+                    BorderStyle: =""
                     DisplayMode: =DisplayMode.Edit
                     Height: =32
                     LayoutMinHeight: =32
