--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -76,6 +76,7 @@ com_Footer As CanvasComponent:
 
         btn_Save As Button:
             BasePaletteColor: =
+            BorderStyle: =""
             DisplayMode: =If(isLoading, DisplayMode.Disabled, DisplayMode.Edit)
             Height: =32
             Layout: ='ButtonCanvas.Layout'.TextOnly
