--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -6,8 +6,10 @@ com_Galleries As CanvasComponent:
     Height: =300
     LineLabels: |-
         ={Line1: "Line1", Line2: "Line2", Line3: "Line3", Line4: "Line4", Line5: "Line5"}
+    LineValuePosition: |-
+        ={Item_No: 0, Posting_Group: Blank(), Inv_Posting_Group: 1, Description: 2, Quantity: 3, Unit_Of_Measure: Blank(), 'Qty-to_Ship': 4}
     LineValueVisibility: |-
-        ={Line_No: false, Item_No: true, Posting_Group: false, Description: false, Quantity: false, Unit_Of_Measure: false, 'Qty-to_Ship': false}
+        ={Line_No: false, Item_No: true, Posting_Group: false, Inv_Posting_Group: true, Description: true, Quantity: true, Unit_Of_Measure: false, 'Qty-to_Ship': true}
     NumberOfLinesToDisplay: =5
     OnReset: =
     SelectedEntry: =glr_Entries.Selected
@@ -44,6 +46,7 @@ com_Galleries As CanvasComponent:
 
             txt_Lines As Text:
                 AutoHeight: =false
+                BorderStyle: =""
                 DisplayMode: =DisplayMode.Edit
                 Height: =32
                 LayoutMinHeight: =32
@@ -97,7 +100,7 @@ com_Galleries As CanvasComponent:
                     OnSelect: =Select(Parent)
                     Width: =Parent.TemplateWidth
                     Y: =Parent.TemplateHeight - Self.Height
-                    ZIndex: =5
+                    ZIndex: =6
 
                 rct_LineSelected As rectangle:
                     BorderColor: =App.Theme.Colors.Darker40
@@ -106,7 +109,7 @@ com_Galleries As CanvasComponent:
                     OnSelect: =Select(Parent)
                     Visible: =ThisItem.IsSelected
                     Width: =4
-                    ZIndex: =6
+                    ZIndex: =7
 
                 grp_LinesLabels As group:
                     Height: =5
@@ -132,7 +135,7 @@ com_Galleries As CanvasComponent:
                         Width: =160
                         X: =16
                         Y: =10
-                        ZIndex: =1
+                        ZIndex: =3
 
                     lbl_Line2 As label:
                         Color: =RGBA(0, 0, 0, 1)
@@ -151,7 +154,7 @@ com_Galleries As CanvasComponent:
                         Width: =160
                         X: =lbl_Line1.X
                         Y: =lbl_Line1.Y + lbl_Line1.Height + 5
-                        ZIndex: =2
+                        ZIndex: =4
 
                     lbl_Line3 As label:
                         Color: =RGBA(0, 0, 0, 1)
@@ -170,7 +173,7 @@ com_Galleries As CanvasComponent:
                         Width: =160
                         X: =lbl_Line1.X
                         Y: =lbl_Line2.Y + lbl_Line2.Height + 5
-                        ZIndex: =3
+                        ZIndex: =5
 
                     lbl_Line4 As label:
                         Color: =RGBA(0, 0, 0, 1)
@@ -189,7 +192,7 @@ com_Galleries As CanvasComponent:
                         Width: =160
                         X: =lbl_Line1.X
                         Y: =lbl_Line3.Y + lbl_Line3.Height + 5
-                        ZIndex: =7
+                        ZIndex: =8
 
                     lbl_Line5 As label:
                         Color: =RGBA(0, 0, 0, 1)
@@ -208,36 +211,36 @@ com_Galleries As CanvasComponent:
                         Width: =160
                         X: =lbl_Line1.X
                         Y: =lbl_Line4.Y + lbl_Line4.Height + 5
-                        ZIndex: =8
+                        ZIndex: =9
 
                 grp_LinesValues As group:
                     Height: =5
                     Width: =5
                     X: =40
                     Y: =40
-                    ZIndex: =15
+                    ZIndex: =16
 
-                    lbl_LineItemNo As label:
+                    lbl_LineQtyToShip As label:
                         Color: =RGBA(50, 49, 48, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
+                        Height: =If(Self.Visible, Self.Size * 1.8, 0)
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
                         PaddingTop: =0
                         Size: =12
-                        Text: =ThisItem.Item_No
+                        Text: =ThisItem.'Qty-to_Ship'
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =com_Galleries.LineValueVisibility.Item_No
+                        Visible: =com_Galleries.LineValueVisibility.'Qty-to_Ship'
                         Width: =Parent.TemplateWidth - 250
                         X: =lbl_Line1.Width + lbl_Line1.X
-                        Y: =lbl_Line1.Y
-                        ZIndex: =9
+                        Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.'Qty-to_Ship') + (com_Galleries.LineValuePosition.'Qty-to_Ship' * 5)
+                        ZIndex: =1
 
-                    lbl_LinePostingGroup As label:
+                    lbl_LineUnitOfMeasure As label:
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
@@ -249,12 +252,32 @@ com_Galleries As CanvasComponent:
                         PaddingRight: =0
                         PaddingTop: =0
                         Size: =12
-                        Text: =ThisItem.Posting_Group
+                        Text: =ThisItem.Unit_Of_Measure
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =com_Galleries.LineValueVisibility.Posting_Group
+                        Visible: =com_Galleries.LineValueVisibility.Unit_Of_Measure
                         Width: =Parent.TemplateWidth - 250
                         X: =lbl_Line1.Width + lbl_Line1.X
-                        Y: =lbl_LineItemNo.Y + lbl_LineItemNo.Height + 5
+                        Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.Unit_Of_Measure)
+                        ZIndex: =2
+
+                    lbl_LineQuantity As label:
+                        Color: =RGBA(0, 0, 0, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        Font: =App.Theme.Font
+                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                        Height: =If(Self.Visible, Self.Size * 1.8, 0)
+                        OnSelect: =Select(Parent)
+                        PaddingBottom: =0
+                        PaddingLeft: =0
+                        PaddingRight: =0
+                        PaddingTop: =0
+                        Size: =12
+                        Text: =ThisItem.Quantity
+                        VerticalAlign: =VerticalAlign.Top
+                        Visible: =com_Galleries.LineValueVisibility.Quantity
+                        Width: =Parent.TemplateWidth - 250
+                        X: =lbl_Line1.Width + lbl_Line1.X
+                        Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.Quantity) + (com_Galleries.LineValuePosition.Quantity * 5)
                         ZIndex: =10
 
                     lbl_LineDescription As label:
@@ -274,10 +297,10 @@ com_Galleries As CanvasComponent:
                         Visible: =com_Galleries.LineValueVisibility.Description
                         Width: =Parent.TemplateWidth - 250
                         X: =lbl_Line1.Width + lbl_Line1.X
-                        Y: =lbl_LinePostingGroup.Y + lbl_LinePostingGroup.Height + If(lbl_LinePostingGroup.Visible, 5, 0)
+                        Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.Description) + (com_Galleries.LineValuePosition.Description * 5)
                         ZIndex: =11
 
-                    lbl_LineQuantity As label:
+                    lbl_LineInvPostingGroup As label:
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
@@ -289,15 +312,15 @@ com_Galleries As CanvasComponent:
                         PaddingRight: =0
                         PaddingTop: =0
                         Size: =12
-                        Text: =ThisItem.Quantity
+                        Text: =ThisItem.Inv_Posting_Group
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =com_Galleries.LineValueVisibility.Quantity
+                        Visible: =com_Galleries.LineValueVisibility.Inv_Posting_Group
                         Width: =Parent.TemplateWidth - 250
                         X: =lbl_Line1.Width + lbl_Line1.X
-                        Y: =lbl_LineDescription.Y + lbl_LineDescription.Height + If(lbl_LineDescription.Visible, 5, 0)
+                        Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.Inv_Posting_Group) + (com_Galleries.LineValuePosition.Inv_Posting_Group * 5)
                         ZIndex: =12
 
-                    lbl_LineUnitOfMeasure As label:
+                    lbl_LinePostingGroup As label:
                         Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
@@ -309,38 +332,39 @@ com_Galleries As CanvasComponent:
                         PaddingRight: =0
                         PaddingTop: =0
                         Size: =12
-                        Text: =ThisItem.Unit_Of_Measure
+                        Text: =ThisItem.Posting_Group
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =com_Galleries.LineValueVisibility.Unit_Of_Measure
+                        Visible: =com_Galleries.LineValueVisibility.Posting_Group
                         Width: =Parent.TemplateWidth - 250
                         X: =lbl_Line1.Width + lbl_Line1.X
-                        Y: =lbl_LineQuantity.Y + lbl_LineQuantity.Height + If(lbl_LineQuantity.Visible, 5, 0)
+                        Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.Posting_Group)
                         ZIndex: =13
 
-                    lbl_LineQtyToShip As label:
+                    lbl_LineItemNo As label:
                         Color: =RGBA(50, 49, 48, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         Font: =App.Theme.Font
                         FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =If(Self.Visible, Self.Size * 1.8, 0)
+                        Height: =Self.Size * 1.8
                         OnSelect: =Select(Parent)
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
                         PaddingTop: =0
                         Size: =12
-                        Text: =ThisItem.'Qty-to_Ship'
+                        Text: =ThisItem.Item_No
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =com_Galleries.LineValueVisibility.'Qty-to_Ship'
+                        Visible: =com_Galleries.LineValueVisibility.Item_No
                         Width: =Parent.TemplateWidth - 250
                         X: =lbl_Line1.Width + lbl_Line1.X
-                        Y: =lbl_LineUnitOfMeasure.Y + lbl_LineUnitOfMeasure.Height + If(lbl_LineUnitOfMeasure.Visible, 5, 0)
+                        Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.Item_No) + (com_Galleries.LineValuePosition.Item_No * 5)
                         ZIndex: =14
 
             btn_BackToLines As Button:
                 Align: =Align.Left
                 Appearance: ='ButtonCanvas.Appearance'.Transparent
                 BasePaletteColor: =
+                BorderStyle: =""
                 DisplayMode: =DisplayMode.Edit
                 FontColor: =
                 FontSize: =18
