--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -64,6 +64,7 @@ com_Header As CanvasComponent:
                 Align: =Align.Left
                 AlignInContainer: =AlignInContainer.Center
                 Appearance: ='ButtonCanvas.Appearance'.Transparent
+                BorderStyle: =""
                 DisplayMode: =DisplayMode.Edit
                 Height: =20
                 Icon: ="ArrowLeft"
