--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -527,6 +527,7 @@
                     ZIndex: =1
 
                     TextCanvas6 As Text:
+                        BorderStyle: =""
                         DisplayMode: =DisplayMode.Edit
                         Height: =110
                         Text: =TEST
@@ -990,6 +991,7 @@
                                 Align: ='TextInputCanvas.Align'.Start
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
+                                BorderStyle: =""
                                 DelayOutput: =true
                                 DisplayMode: =DisplayMode.Edit
                                 Fill: =
@@ -1032,6 +1034,7 @@
                                 Align: ='TextInputCanvas.Align'.Start
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
+                                BorderStyle: =""
                                 DelayOutput: =true
                                 DisplayMode: =DisplayMode.Edit
                                 Fill: =
@@ -1049,6 +1052,7 @@
                             "DatePickerCanvas1 As 'Date picker'":
                                 Appearance: ='DatePickerCanvas.Appearance'.FilledDarker
                                 BasePaletteColor: =RGBA(249, 83, 109, 1)
+                                BorderStyle: =""
                                 DisplayMode: =DisplayMode.Edit
                                 Format: ="dd.mm.yyyy"
                                 Height: =32
@@ -1348,6 +1352,7 @@
 
                         TextCanvas3 As Text:
                             AutoHeight: =true
+                            BorderStyle: =""
                             DisplayMode: =DisplayMode.Edit
                             Height: =32
                             LayoutMinHeight: =32
@@ -1361,6 +1366,7 @@
                         "inp_Quantity As 'Text input'":
                             Align: ='TextInputCanvas.Align'.End
                             BasePaletteColor: =
+                            BorderStyle: =""
                             DisplayMode: =DisplayMode.Edit
                             FontSize: =12
                             Height: =32
@@ -1391,6 +1397,7 @@
 
                         TextCanvas3_1 As Text:
                             AutoHeight: =true
+                            BorderStyle: =""
                             DisplayMode: =DisplayMode.Edit
                             Height: =32
                             LayoutMinHeight: =32
@@ -1402,6 +1409,7 @@
                             ZIndex: =1
 
                         "DatePickerCanvas2 As 'Date picker'":
+                            BorderStyle: =""
                             DisplayMode: =DisplayMode.Edit
                             Format: ='DatePickerCanvas.Format'.Short
                             Height: =32
@@ -1453,6 +1461,7 @@
 
                         TextCanvas3_2 As Text:
                             AutoHeight: =true
+                            BorderStyle: =""
                             DisplayMode: =DisplayMode.Edit
                             Height: =32
                             LayoutMinHeight: =32
@@ -1466,6 +1475,7 @@
                         "inp_LOTNo As 'Text input'":
                             Align: ='TextInputCanvas.Align'.End
                             BasePaletteColor: =
+                            BorderStyle: =""
                             DisplayMode: =DisplayMode.Edit
                             FontSize: =12
                             Height: =32
@@ -1500,6 +1510,7 @@
                     ButtonCanvas2 As Button:
                         Appearance: ='ButtonCanvas.Appearance'.Secondary
                         BasePaletteColor: =
+                        BorderStyle: =""
                         DisplayMode: =DisplayMode.Edit
                         Height: =32
                         Icon: ="DismissCircle"
@@ -1516,6 +1527,7 @@
 
                     ButtonCanvas3 As Button:
                         BasePaletteColor: =
+                        BorderStyle: =""
                         DisplayMode: =DisplayMode.Edit
                         Height: =32
                         Icon: ="Save"
