--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -686,7 +686,7 @@
 
                 spn_EntryLoader As Spinner:
                     Appearance: ='Spinner.Appearance'.Primary
-                    BasePaletteColor: =RGBA(249, 83, 109, 1)
+                    BasePaletteColor: =
                     DisplayMode: =DisplayMode.Edit
                     FontColor: =
                     Height: =Parent.Height
