--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -572,6 +572,8 @@
                     DisplayMode: =DisplayMode.Edit
                     FontColor: =
                     Height: =Parent.Height
+                    Label: ="Učitavam dokument..."
+                    LabelPosition: ='Spinner.LabelPosition'.Below
                     SpinnerSize: ='Spinner.SpinnerSize'.Huge
                     Visible: =isLoading
                     Width: =Parent.Width
